tdf#152675 treat all cairo versions <= 1.17.8 the same

wrt unwanted sideeffects of CAIRO_HINT_METRICS_OFF seen
in https://gitlab.freedesktop.org/cairo/cairo/-/issues/643
and https://bugs.documentfoundation.org/show_bug.cgi?id=152675

Change-Id: Ib3f43fd3832083f1768b737e3a5fb28063c0ae23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157177
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 1dd357ccf7ca9edbe5f2ef60465c2559f678d306)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157126
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>